--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.3",
+    "dotenv": "^16.0.3",
+    "ethers": "^5.7.1",
     "hardhat": "^2.12.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "web3": "^1.8.0"
   }
 }
